--- a/_config.yml
+++ b/_config.yml
@@ -1,56 +1,26 @@
-title: Saiyam Pathak 
-author: GitHub User
-email: your-email@domain.com
-description: > # this means to ignore newlines until "show_exerpts:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-show_excerpts: true # set to true to show excerpts on the homepage
+# Dependencies
+markdown:         redcarpet
+highlighter:      pygments
 
-# Minima date format
-# refer to http://shopify.github.io/liquid/filters/date/ if you want to customize this
-sass:
-  sass_dir: _sass
-plainwhite:
-  name: Saiyam Pathak
-  tagline: Docker Community Leader 
-  date_format: "%b %-d, %Y"
-  sitemap: true # set to true to generate sitemap.xml content
+# Permalinks
+permalink:        pretty
+relative_permalinks: true
 
-  # generate social links in footer
-  social_links:
-    twitter: SaiyamPathak
-    github: saiyam1814
-    linkedIn: in/saiyam-pathak-97685a64/
-    rss: rss
-    # dribbble: jekyll
-    # facebook: jekyll
-    # flickr:   jekyll
-    # instagram: jekyll
-    # linkedin: jekyll
-    # pinterest: jekyll
-    # youtube: jekyll
-    # youtube_channel: UC8CXR0-3I70i1tfPg1PAE1g
-    # youtube_channel_name: CloudCannon
-    # telegram: jekyll
-    # googleplus: +jekyll
-    # microdotblog: jekyll
+# Setup
+title:            Hyde
+tagline:          'A Jekyll theme'
+description:      'A brazen two-column <a href="http://jekyllrb.com" target="_blank">Jekyll</a> theme that pairs a prominent sidebar with uncomplicated content. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
+url:              http://hyde.getpoole.com
+baseurl:          /
 
-    # Mastodon instances
-    # mastodon:
-    # - username: jekyll
-    #   instance: example.com
-    # - username: jekyll2
-    #   instance: example.com
+author:
+  name:           'Mark Otto'
+  url:            https://twitter.com/mdo
 
-# If you want to link only specific pages in your header, uncomment
-# this and add the path to the pages in order as they should show up
-#header_pages:
-# - about.md
+paginate:         5
 
-# Build settings
-theme: plainwhite
+# Custom vars
+version:          2.1.0
 
-plugins:
-  - jekyll-seo-tag
-#  - jekyll-feed
+github:
+  repo:           https://github.com/poole/hyde
