--- a/_config.yml
+++ b/_config.yml
@@ -14,8 +14,8 @@ url:              http://hyde.getpoole.com
 baseurl:          /
 
 author:
-  name:           'Mark Otto'
-  url:            https://twitter.com/mdo
+  name:           'SangamBiradar'
+  url:            https://twitter.com/BiradarSangam
 
 paginate:         5
 
