--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ baseurl:
 title: 
 author: 
 description:  Saiyam Pathak
-avatar: 
+avatar: https://avatars1.githubusercontent.com/u/8190114?s=400&v=4
 email: 
 github: # username
 twitter: 
