--- a/_config.yml
+++ b/_config.yml
@@ -15,8 +15,8 @@ url:
 baseurl: 
 title: 
 author: 
-description:  Saiyam Pathak
-avatar: https://avatars1.githubusercontent.com/u/8190114?s=400&v=4
+description: Saiyam Pathak
+avatar: /assets/images/saiyam.jpg 
 email: 
 github: # username
 twitter: 
