--- a/_config.yml
+++ b/_config.yml
@@ -11,11 +11,11 @@ safe: true
 
 
 # edit here to achieve your personal greatness
-url: 
-baseurl: 
+url: saiyam1814.github.io
+baseurl: saiyam1814.github.io
 title: 
-author: 
-description: Saiyam Pathak
+author: Saiyam Pathak
+description: 
 avatar: /assets/images/saiyam.jpg 
 email: 
 github: # username
