--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ safe: true
 
 # edit here to achieve your personal greatness
 url: saiyam1814.github.io
-baseurl: saiyam1814.github.io
+baseurl: 
 title: 
 author: Saiyam Pathak
 description: 
