--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ baseurl:
 title: 
 author: Saiyam Pathak
 description: 
-avatar: /assets/images/saiyam.jpg 
+avatar: saiyam.jpg 
 email: 
 github: # username
 twitter: 
